Bug 10144 - SMB2 connections to an OEM server fail with bad MID.
Summary: SMB2 connections to an OEM server fail with bad MID.
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: libsmbclient (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks: 9306
  Show dependency treegraph
 
Reported: 2013-09-17 02:21 UTC by Jeremy Allison
Modified: 2013-09-19 08:00 UTC (History)
1 user (show)

See Also:


Attachments
git-am fix from master for 4.1.0 (1017 bytes, patch)
2013-09-17 18:08 UTC, Jeremy Allison
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Allison 2013-09-17 02:21:24 UTC
Discovered in the SNIA SDC plugfest.

Some SMB2 servers reflect back the initial SMB1 Negprot mid value sent as the reply SMB2 command sequence number instead of returning zero.

Windows clients always send an initial SMB1 Negprot value of zero, so just send that.

Patch to follow.

Jeremy.
Comment 1 Jeremy Allison 2013-09-17 18:08:19 UTC
Created attachment 9219 [details]
git-am fix from master for 4.1.0

git cherry-pick -x 1d54d8c501afa151b6cc07b98a14caae2b31ec65
Comment 2 Jeremy Allison 2013-09-17 23:32:22 UTC
Re-assigned to Karolin for inclusion in 4.1.0.
Jeremy.
Comment 3 Karolin Seeger 2013-09-18 07:23:49 UTC
Pushed to autobuild-v4-1-test.
Comment 4 Karolin Seeger 2013-09-19 08:00:22 UTC
Pushed to v4-1-test.
Closing out bug report.

Thanks!